[gd_scene load_steps=17 format=3 uid="uid://d3rr80644jgyv"]

[ext_resource type="Script" path="res://scenes/screens/dialog_popup.gd" id="1_kjqhd"]
[ext_resource type="Texture2D" uid="uid://bmq3ltjgj52gq" path="res://icon.svg" id="2_byee4"]
[ext_resource type="Script" path="res://resources/DialogTreeData.gd" id="2_ditk3"]
[ext_resource type="Script" path="res://addons/awesome_input_icons/classes/InputIconTextureRect.gd" id="3_3mvpc"]
[ext_resource type="Script" path="res://resources/DialogData.gd" id="3_26dx5"]
[ext_resource type="LabelSettings" uid="uid://b8sf8e4y4irts" path="res://resources/label setting/h1.tres" id="4_x2aue"]

[sub_resource type="Resource" id="Resource_1jvrp"]
script = ExtResource("3_26dx5")
character = "Mirror"
dialog = "I told you"

[sub_resource type="Resource" id="Resource_okycb"]
script = ExtResource("3_26dx5")
character = ""
dialog = "You are not going back"

[sub_resource type="Resource" id="Resource_ai4qo"]
script = ExtResource("2_ditk3")
tree = Array[ExtResource("3_26dx5")]([SubResource("Resource_1jvrp"), SubResource("Resource_okycb")])

[sub_resource type="Gradient" id="Gradient_2yjdt"]
offsets = PackedFloat32Array(0, 0)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k3sdh"]
gradient = SubResource("Gradient_2yjdt")
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_efvql"]
font_size = 23

[sub_resource type="Animation" id="Animation_tyw5l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gradient:texture:gradient:offsets")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [PackedFloat32Array(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/Character:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Dialog:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/HBoxContainer/InputIconTextureRect:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MarginContainer/HBoxContainer/InputIconTextureRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r4ioe"]
resource_name = "show_continue"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/HBoxContainer/InputIconTextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1.62451, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/InputIconTextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_dfml8"]
resource_name = "show_dialog"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("gradient:texture:gradient:offsets")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.4, 2),
"update": 0,
"values": [PackedFloat32Array(0, 0), PackedFloat32Array(0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/Character:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Dialog:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_md0wt"]
_data = {
"RESET": SubResource("Animation_tyw5l"),
"show_continue": SubResource("Animation_r4ioe"),
"show_dialog": SubResource("Animation_dfml8")
}

[node name="DialogPopup" type="Control" node_paths=PackedStringArray("character_label", "dialog_label", "input_icon_rect", "continue_timer", "anim")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_kjqhd")
dialog_tree = SubResource("Resource_ai4qo")
character_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/Character")
dialog_label = NodePath("MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/Dialog")
input_icon_rect = NodePath("MarginContainer/HBoxContainer/InputIconTextureRect")
continue_timer = NodePath("continue_timer")
anim = NodePath("AnimationPlayer")

[node name="gradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 298.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_k3sdh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 304.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="Character" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 1
text = "MIRROR"
label_settings = ExtResource("4_x2aue")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25

[node name="Dialog" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 15)
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
text = "Once upon a time.."
label_settings = SubResource("LabelSettings_efvql")
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 3

[node name="InputIconTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(21.28, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("2_byee4")
expand_mode = 3
stretch_mode = 5
script = ExtResource("3_3mvpc")
action_name = &"ACTION_INTERACT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_md0wt")
}

[node name="continue_timer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="continue_timer" to="." method="_on_continue_timer_timeout"]
